--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <section class="header">
-        <div class="logo"><a href="index.html"><img src="/Users/erikavilleda/Documents/My files/wd test/sources/mag_logo.svg"/></a></div>
+        <div class="logo"><a href="index.html"><img src="https://raw.githubusercontent.com/erika-villeda/erika-villeda.github.io/1f697160a39e23adad94615329281ce80b20cbdb/sources/mag_logo.svg"/></a></div>
     </section>
 
 <section class="landing">
